# musicprint

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  PAPER.md  README.md  demo.py  docker-compose.test.yml  docker-compose.yml  experiments.py  system_design.md
1_adapter_training/: docker-compose.yml  requirements.txt
2_vector_index/: Dockerfile  docker-compose.yml  requirements.txt
3_meta_tokenizer/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
4_album_art/: Dockerfile  docker-compose.yml  requirements.txt
adapter_training_pipeline/: .dockerignore  Dockerfile  docker-compose.yml
album_art_tokenizer_pipeline/: Dockerfile  README.md  docker-compose.yml
audio_vector_pipeline/: Dockerfile  docker-compose.yml
demo_app/: Dockerfile  app.py  audio.py  docker-compose.yml  metadata.py  requirements.txt  search.py
docker/: Dockerfile.demo  Dockerfile.pipeline
libmusicprint/: CMakeLists.txt  Makefile  docker-compose.yml
libmusicprint/include/: ArtDatabase.h  BPEDecoder.h  BinaryReader.h  MetadataDatabase.h  Searcher.h
libmusicprint/src/: ArtDatabase.cpp  BPEDecoder.cpp  BinaryReader.cpp  MetadataDatabase.cpp  Searcher.cpp  cli_search.cpp
libmusicprint/tests/: test_art.cpp  test_meta.cpp  test_search.cpp
meta_tokenizer_pipeline/: .gitignore  Dockerfile  README.md  docker-compose.yml
pipeline/: DEVELOPMENT.md  Dockerfile  docker-compose.yml
release/: MusicPrintEncoder.mlpackage  encoder.pt
scripts/: verify.py
tests/: conftest.py  smoke_test_generator.py  test_audio.py
vector_index_pipeline/: DEVELOPMENT.md  (+2 more)
(+95 files in other folders)
